<resources>
    <string name="app_name">FYP</string>

    <!--Bottom Navigation Bar-->
    <string name="search">Search</string>
    <string name="bookmark">Bookmark</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="brands">BRANDS</string>
    <string name="brands_a_z">BRANDS A-Z</string>
    <string name="view_all">VIEW ALL</string>
    <string name="latest">LATEST</string>
    <string name="currency">RM%1$.2f</string>

    <!--Login Activity-->
    <string name="textSignIn">Sign In</string>
    <string name="buttonSignIn">Sign In</string>
    <string name="registerTextView">No Account yet? Register here</string>
    <string name="TextViewSignStaff">Staff? Sign in here</string>

    <!-- Register Activity -->
    <string name="registerText">User Registration</string>
    <string name="nameText">Name</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="cpasswordText">Confirm Password</string>
    <string name="registerButton">Register</string>
    <string name="signInText">Already Register? Login here</string>

    <!-- Profile Activity -->
    <string name="setUserPreferenceText">Set User Preference</string>
    <string name="ewalletText">E-wallet</string>
    <string name="trackShippingText">Track your shipping</string>
    <string name="setAddressText">Manage Address</string>
    <string name="signOutText">Sign Out</string>

    <!-- E-wallet Activity -->
    <string name="textBalance">E-Wallet Balance</string>
    <string name="textAmount">RM 0.00</string>
    <string name="topup">Top Up</string>
    <string name="withdraw">Withdraw</string>
    <string name="transactionHistory">Transaction History :</string>

    <!-- Topup Activity -->
    <string name="textTopupAmount">Topup amount : RM</string>
    <string name="textCardNumber">Card Number :</string>
    <string name="textExpiryDate">Expiry Date :</string>
    <string name="textCVV">CVV</string>
    <string name="textSave">Save details for future payment</string>
    <string name="textSubmit">Submit</string>
    <string name="textMinTopup">Enter at least RM50</string>

    <!-- Delivery Service Activity -->
    <string name="textShipping">Shipping :</string>

    <!-- Address Activity -->
    <string name="textAddAddress">Add Address</string>

    <!-- Set Address Activity -->
    <string name="textReceiverName">Receiver Name</string>
    <string name="textPhoneNumber">Phone Number</string>
    <string name="textAddress">Unit, Building, Street and etc</string>
    <string name="textPostalCode">Postal Code</string>
    <string name="textArea">Area</string>
    <string-array name="stateItem">
        <item>Selangor</item>
        <item>Putrajaya</item>
        <item>Kuala Lumpur</item>
    </string-array>
    <string name="textDefaultAddress">Set as Default Address</string>
    <string name="address">Address</string>

    <!-- Transaction Confirmation Activity -->
    <string name="textTransCon">Transaction Confirmation</string>
    <string name="textTransID">Transaction ID</string>
    <string name="textTo">To</string>
    <string name="textTransDescription">Description</string>
    <string name="amount">Amount</string>
    <string name="cancel">Cancel</string>

    <!-- Transaction Done Activity -->
    <string name="textStatus">Status</string>
    <string name="textDateTime">Transaction Date and Time</string>
    <string name="textbalanceBefore">Balance Before</string>
    <string name="textbalanceAfter">Balance After</string>
    <string name="btnBack">Back</string>

    <!-- Withdraw Activity -->
    <string name="textWithdraw">Withdraw amount : RM </string>
    <string name="textvalue">You have available balance of RM</string>
    <string name="textAccountNo">Account Number :</string>

    <!-- User Preference Activity -->
    <string name="textManageUP">Manage User Preference</string>
    <string name="textDetails">Please choose 1 category you wish to show for all the time :</string>
    <string name="cat1">Shirts</string>
    <string name="cat2">Pants</string>
    <string name="cat3">Shoes</string>
    <string name="cat4">Adidas</string>
    <string name="cat5">Puma</string>
    <string name="cat6">Nike</string>
    <string name="save">Save</string>

    <!-- Staff Login -->
    <string name="textLoginCus">Customer? Sign in here</string>
    <string name="textId">Staff ID</string>


</resources>
