<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPreferenceFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/textManageUP"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/textDetails" />

        <RadioGroup
            android:id="@+id/radioCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/cat1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat1"/>

            <RadioButton
                android:id="@+id/cat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat2"/>
            <RadioButton
                android:id="@+id/cat3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat3"/>
            <RadioButton
                android:id="@+id/cat4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat4"/>
            <RadioButton
                android:id="@+id/cat5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat5"/>
            <RadioButton
                android:id="@+id/cat6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat6" />
        </RadioGroup>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save"
            android:textAllCaps="false"/>


</LinearLayout>
    </RelativeLayout>
</FrameLayout>