<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetAddressActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/textReceiverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textReceiverName"/>

        <EditText
            android:id="@+id/textPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/textPhoneNumber"/>

        <EditText
            android:id="@+id/textAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textAddress"/>

        <EditText
            android:id="@+id/textPostalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textPostalCode"/>

        <EditText
            android:id="@+id/textArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textArea"/>

        <Spinner
            android:id="@+id/spinnerState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/checkSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDefaultAddress"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textSubmit"/>


    </LinearLayout>


</RelativeLayout>