<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionDoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/textStatus"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textTransID"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/transactionID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="yymmdd0000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textTo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/To"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Smart Dreser" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textTransDescription"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/transDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Topup" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
        android:id="@+id/transAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="RM 0.00" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textbalanceBefore"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/balanceBefore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RM 0.00" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textbalanceAfter"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/balanceAfter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RM 0.00" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textDateTime"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/transDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="dd-MM-yyyy hh:MM:ss" />


        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnBack"
            android:textAllCaps="false" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>