<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StaffLoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/textSignIn"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_margin="15dp"
                android:inputType="number"
                android:hint="@string/textId"
                android:id="@+id/staffId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <EditText
                android:layout_margin="15dp"
                android:inputType="textPassword"
                android:hint="@string/passwordText"
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_margin="15dp"
                android:id="@+id/buttonSignIn"
                android:text="@string/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textAlignment="center"
                android:text="@string/textLoginCus"
                android:id="@+id/textCusLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </RelativeLayout>

</FrameLayout>