<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eWalletFragment">

 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">

         <TextView
             android:id="@+id/textViewBalance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/textBalance"/>

         <TextView
             android:id="@+id/textViewAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/textAmount"
             android:textAppearance="?android:attr/textAppearanceLarge" />

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">

             <Button
                 android:id="@+id/buttonTopUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/topup" />

             <Button
                 android:id="@+id/buttonWithdraw"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/withdraw" />

         </LinearLayout>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/transactionHistory"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/transactionList"/>

     </LinearLayout>

 </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>